# cpu_ray_tracing

./: .gitignore  .gitmodules  CMakeLists.txt
source/: CMakeLists.txt  main.cpp
source/include/: camera.hpp  film.hpp  frame.hpp  material.hpp  model.hpp  plane.hpp  ray.hpp  scene.hpp  shape.hpp  sphere.hpp  spin_lock.hpp  thread_pool.hpp  timer.hpp  triangle.hpp
source/include/accelerate/: bounds.hpp  bvh.hpp  scene_bvh.hpp
source/include/camera/: camera.hpp  film.hpp  ray.hpp
source/include/material/: base.hpp  conductor.hpp  dielectric.hpp  diffuse.hpp  ground.hpp  specular.hpp
source/include/renderer/: base.hpp  debug.hpp  normal.hpp  pathtracing.hpp  simple_rt.hpp
source/include/sample/: spherical.hpp
source/include/shape/: material.hpp  model.hpp  plane.hpp  scene.hpp  shape.hpp  sphere.hpp  triangle.hpp
source/include/thread/: thread_pool.hpp
source/include/utils/: complex.hpp  profile.hpp  progress.hpp  random.hpp  rgb.hpp  timer.hpp
source/src/: camera.cpp  film.cpp  frame.cpp  main.cpp  model.cpp  plane.cpp  ray.cpp  scene.cpp  sphere.cpp  thread_pool.cpp  triangle.cpp
source/src/accelerate/: bounds.cpp  bvh.cpp  scene_bvh.cpp
source/src/camera/: camera.cpp  film.cpp  ray.cpp
source/src/material/: conductor.cpp  dielectric.cpp  diffuse.cpp  ground.cpp  specular.cpp
source/src/renderer/: base.cpp  base_renderer.cpp  debug.cpp  normal.cpp  pathtracing.cpp  simple_raytracing.cpp  simple_rt.cpp
source/src/shape/: model.cpp  plane.cpp  scene.cpp  sphere.cpp  triangle.cpp
source/src/thread/: thread_pool.cpp
source/src/utils/: frame.cpp  (+3 more)
